begin convert to pluging

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -45,43 +45,54 @@
     $("#total").html((total *  params["multiply"] ) / params["divisor"]);
   }
 
- function make_magic(singleItems, multipleItems, pollTimeout) {
-    //set defaults 
-    if (pollTimeout === undefined){
-      pollTimeout = 3000;
-    }
-    //build functions 
-    var onValuesChanged = function () {
-      var params = new Array();
-      for (var id in singleItems){
-        params[singleItems[id]] = parseFloat($("#" + singleItems[id]).val());
-      }
-      for (var klass in multipleItems){
-        var collection = new Array();
-        var items = $("." + multipleItems[klass]);
-        jQuery.each(items, function(index,value){
-          collection[index] = parseFloat($(value).val());
-        });
-        params[multipleItems[klass]] = collection;
-      }
-      calculate_total(params);
+  (function($){
+    $.fn.make_magic = function(options){
+      var defaults = { 
+        singleItems : [],
+        multipleItems : [],
+        pollTimeout : 3000
+      };
+      var options = $.extend(defaults,options);
+
+      return this.each(function () {
+        //build functions 
+        var onValuesChanged = function () {
+          var params = new Array();
+          for (var id in options.singleItems){
+            params[options.singleItems[id]] = parseFloat($("#" + options.singleItems[id]).val());
+          }
+          for (var klass in options.multipleItems){
+            var collection = new Array();
+            var items = $("." + options.multipleItems[klass]);
+            jQuery.each(items, function(index,value){
+              collection[index] = parseFloat($(value).val());
+            });
+            params[options.multipleItems[klass]] = collection;
+          }
+          calculate_total(params);
+        };
+        var pollForChanges = function () {
+          onValuesChanged();
+          setTimeout(pollForChanges, options.pollTimeout);
+        };
+        // set up on change events 
+        for (var id in options.singleItems){
+          $("#" + options.singleItems[id]).change(onValuesChanged());
+        }
+        for (var klas in options.multipleItems){
+          $("." + options.multipleItems[klas]).change(onValuesChanged());
+        }
+        //at the end call the function
+        pollForChanges();
+           
+
+      });
     };
-    var pollForChanges = function () {
-      onValuesChanged();
-      setTimeout(pollForChanges, pollTimeout);
-    };
-    // set up on change events 
-    for (var id in singleItems){
-      $("#" + singleItems[id]).change(onValuesChanged());
-    }
-    for (var klas in multipleItems){
-      $("." + multipleItems[klas]).change(onValuesChanged());
-    }
-    //at the end call the function
-    pollForChanges();
-  }
+  })(jQuery);
+
   $(function(){
-    make_magic(["multiply", "divisor"], ["add","subtract"]);
+    //$.make_magic(["multiply", "divisor"], ["add","subtract"]);
+    $.make_magic();
   });
   
 </script>
