--- a/demo/demo.html
+++ b/demo/demo.html
@@ -46,7 +46,7 @@
     $("#total").html((total *  params["multiply"] ) / params["divisor"]);
   }
   $(function(){
-    $(document).make_magic({singleItems:["multiply", "divisor"], multipleItems:["add","subtract"]});
+    $(document).hyperionize({singleItems:["multiply", "divisor"], multipleItems:["add","subtract"]});
   });
   
 </script>
