--- a/demo/demo.html
+++ b/demo/demo.html
@@ -30,6 +30,36 @@
     <input type="text" id="divisor"  value="0.25"/>
   </div>
   <div class="grid_12" style="border:black solid thin;padding:15px;margin-top:15px" id="total">total</div>
+  <div class="grid_12">
+    <pre><code>
+    
+      $(function(){
+        $(document).hyperionize({
+          singleItems:["multiply", "divisor"],
+          multipleItems:["add","subtract"], 
+          callback : calculate_total
+        });
+      });
+
+
+      function calculate_total(params){
+        var total = 0;
+        var items = params["add"];
+        for ( var i in items){
+          total += items[i];
+        }
+        items = params["subtract"];
+        for (var i in items){
+          total -= items[i];
+        }
+        total *= params["multiply"];
+        total /= params["divisor"];
+        $("#total").html(total);
+      }
+     
+    </code></pre>
+  </div>
+
 </div>
 </body>
 <script type="text/javascript">
@@ -43,10 +73,17 @@
     for (var i in items){
       total -= items[i];
     }
-    $("#total").html((total *  params["multiply"] ) / params["divisor"]);
+    total *= params["multiply"];
+    total /= params["divisor"];
+    $("#total").html(total);
   }
+
   $(function(){
-    $(document).hyperionize({singleItems:["multiply", "divisor"], multipleItems:["add","subtract"], callback : calculate_total});
+    $(document).hyperionize({
+      singleItems:["multiply", "divisor"], 
+      multipleItems:["add","subtract"], 
+      callback : calculate_total
+    });
   });
   
 </script>
