change the name to observe_items

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -34,7 +34,7 @@
     <pre><code>
     
       $(function(){
-        $(document).hyperionize({
+        $(document).observe_items({
           singleItems:["multiply", "divisor"],
           multipleItems:["add","subtract"], 
           callback : calculate_total
