--- a/demo/demo.html
+++ b/demo/demo.html
@@ -2,7 +2,7 @@
 <head>
   <link href="stylesheets/grid.css" media="screen" rel="stylesheet" type="text/css" />
   <script src="js/jquery.min.js" type="text/javascript"></script>
-  <script src="../jquery.hyperion.js" type="text/javascript"></script>
+  <script src="../jquery.floating_shepherd.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="container_12">
@@ -16,20 +16,32 @@
 
   <div class="grid_3">
     <h3>subtract</h3>
-
-    <input type="text" class="subtract" value="6"/>
-    <input type="text" class="subtract" value="12"/>
-    <input type="text" class="subtract" value="24"/>
+    <div class="subtract">4</div> 
+    <div class="subtract">8</div> 
+    <div class="subtract">16</div> 
   </div>
   <div class="grid_3">
     <h3>multiply</h3>
-    <input type="text" id="multiply"  value="0.5"/>
+    <div id="multiply">2</div>
   </div>
   <div class="grid_3">
     <h3>divisor</h3>
     <input type="text" id="divisor"  value="0.25"/>
   </div>
-  <div class="grid_12" style="border:black solid thin;padding:15px;margin-top:15px" id="total">total</div>
+  <div class="grid_12" style="border:black solid thin;padding:15px;margin-top:15px" >
+    Total
+    <div id="total">total</div>
+  </div> 
+  <div class="grid_12" style="border:black solid thin;padding:15px;margin-top:15px">
+    Add Total: 
+    <div id="add_total">total</div>
+    Subtract Total: 
+    <div id="subtract_total">total</div>
+    Multiply Value:
+    <div id="multiply_total">total</div>
+    Divisor Value: 
+    <div id="div_total">total</div>
+  </div>
   <div class="grid_12">
     <pre><code>
     
@@ -69,17 +81,23 @@
     for ( var i in items){
       total += items[i];
     }
+    $("#add_total").html(total);
+    var subTotal = 0;
     items = params["subtract"];
     for (var i in items){
-      total -= items[i];
+      subTotal += items[i];
     }
+    $("#subtract_total").html(subTotal);
+    total -= subTotal;
     total *= params["multiply"];
+    $("#multiply_total").html(params["multiply"]);
     total /= params["divisor"];
+    $("#div_total").html(params["divisor"]);
     $("#total").html(total);
   }
 
   $(function(){
-    $(document).hyperionize({
+    $(document).observe_items({
       singleItems:["multiply", "divisor"], 
       multipleItems:["add","subtract"], 
       callback : calculate_total
